Bug 1322661 - Expose (non-XBL) style sheets to devtools. r=xidorn

MozReview-Commit-ID: 72Lyf8Ak7Ib